# mix-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml  quality-tiers.yml
.claude/: settings.json
.claude/agents/: orchestrator.md  python-typed-engineer.md  typescript-engineer.md
.devcontainer/: Dockerfile  README.md  post-create.sh  verify-container.sh
docs/: orchestrator-remediation-loop-reference.md
src/: __init__.py  _header_detection.py  _load_aop_helpers.py  _mix_bottomsup_helpers.py  _mix_nrr_summary_helpers.py  _mix_rollups_helpers.py  _mix_transforms_helpers.py  _normalize_le_columns.py  _schema_formula_helpers.py  _schema_json_helpers.py  _schema_loader_auto_dedup.py  _schema_loader_helpers.py  _schema_loader_keepset.py  _schema_matching_helpers.py  _schema_migration.py  _schema_model_specs.py  build_exe.py  build_velopack.py  calculator.py  dtype_check.py  etl_column_probe.py  etl_columns.py  etl_key.py  etl_totals.py  le_columns.py  le_key.py  le_totals.py  load_aop.py  load_skulu.py  mix_bottomsup.py  mix_lookups.py  mix_nrr_summary.py  mix_pipeline.py  mix_pipeline_run.py  mix_q1.py  mix_rate_impacts.py  mix_rollups.py  mix_transforms.py  normalize_le.py  pandas_io.py  (+7 more)
src/gui/: __init__.py  (+30 more)
tests/: _mix_rollups_fixtures.py  _schema_loader_fixtures.py  aop_fixtures.py  le_fixtures.py  mix_bottomsup_fixtures.py  test_build_exe.py  test_build_velopack.py  test_calculator.py  test_convert_icon.py  test_default_schemas.py  test_dtype_check.py  test_etl_column_probe.py  test_etl_columns.py  test_etl_key.py  test_header_detection.py  test_le_columns.py  test_le_key.py  test_load_aop.py  test_load_aop_header.py  test_load_aop_helpers.py  test_load_aop_io.py  test_load_aop_key.py  test_load_skulu.py  test_mix_bottomsup.py  test_mix_lookups.py  test_mix_lookups_casefold.py  test_mix_nrr_summary.py  test_mix_pipeline.py  test_mix_pivots.py  test_mix_q1.py  test_mix_rate_impacts.py  test_mix_rollups.py  test_mix_rollups_tieout.py  test_mix_transforms.py  test_normalize_le.py  test_normalize_le_columns.py  test_normalize_le_header.py  test_normalize_le_io.py  test_normalize_le_totals.py  test_schema_formula.py  (+18 more)
(+1492 files in other folders)
